# LogPulse

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: trufflehog.yaml
examples/: battle-test.py  demo.py  viz-test.py
src/LogPulse/: __init__.py  main.py
src/logpulse/: main.py  viz.py
tests/: test_timer.py
