[project]
name = "Chronoflow"
version = "0.1.0"
description = "Project description here"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.5"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
lint = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 112

[tool.ruff.lint]
select = ["I"] # Keeps the import sorting rule from hf-mem
